rename some field -> property instances

--- a/core/src/main/resources/sofia.properties
+++ b/core/src/main/resources/sofia.properties
@@ -5,6 +5,7 @@ cannot.persist.null.entity=Can not persist a null entity.
 collection.not.mapped=The collection ''{0}'' is not mapped to a java class.
 concurrent.modification=Entity of type {0} (id={1}) was not persisted. Either it was modified by another process or was improperly \
   initialized.  See the versioning documentation for more details.
+contradicting.annotations=A property can be either annotated with @{0} OR @{1}, but not both.
 conversion.not.supported=No conversion exists yet for this type:  {0}
 document.stream.exceeded=No more elements remaining
 duplicated.mapped.name=Duplicated mapped name found on {0}: {1}
@@ -30,6 +31,7 @@ mixed.mode.projections=Only one form of projection allowed at a time.
 mixed.projections=Projections can not mix included and excluded fields together.
 mixed.modes.not.allowed={0} can either take a single value or a document but not both.
 mixed.update.operations.not.allowed=Individual fields can not be updated when $setting the document itself.
+multiple.id.properties.found="More than one @Id property found ({0})."
 noarg.constructor.not.found={0} does not have a 0 argument constructor.
 no.id.field.found=No field is annotated with @Id on {0} but it is required
 no.id.for.reference=No ID found for referenced entity.  Ensure referenced entities are saved first.
