--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>9</version>
-    </parent>
+    <distributionManagement>
+        <repository>
+            <id>nosto.repo</id>
+            <name>Nosto Repository</name>
+            <url>https://repo.nos.to/content/repositories/NostoDependencies/</url>
+        </repository>
+    </distributionManagement>
 
     <groupId>dev.morphia.morphia</groupId>
     <artifactId>morphia</artifactId>
-    <version>2.1.5-SNAPSHOT</version>
+    <version>2.1.5-NOSTO-2</version>
     <packaging>pom</packaging>
 
     <name>Morphia</name>
